tweaks to prime

--- a/bower.json
+++ b/bower.json
@@ -3,6 +3,6 @@
   "version": "0.0.1",
   "dependencies": {
     "primish": "0.3.4",
-    "requirejs-text": "~2.0.10"
+    "requirejs": "~2.1.11"
   }
 }
